--- a/my-app/src/components/slider/slider.scss
+++ b/my-app/src/components/slider/slider.scss
@@ -13,12 +13,13 @@
 
 .slider {
   position: fixed;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 4;
   opacity: 0;
 
@@ -33,7 +34,8 @@
 
   &__backgroung {
     position: fixed;
-    background-color: rgba(black, 0.9);
+    background: linear-gradient(90deg, $light-color 0%, $primary-color 35%, $dark-color 100%);
+    opacity: 0.7;
     border: none;
     width: 100%;
     height: 100%;
@@ -76,93 +78,76 @@
     }
   }
 
-  &__carousel {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    font-family: Arial;
+  &__container {
+    position: relative;
+    justify-content: center;
+    text-align: center;
+    height: 80%;
+    z-index: 5;
+    overflow: hidden;
+    margin-bottom: 1%;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    border-radius: 30px;
 
-    &__list {
-      display: flex;
-      list-style: none;
-      position: relative;
-      width: 100%;
-      height: 80vh;
+    &__btn {
       justify-content: center;
-      perspective: 300px;
+      align-items: center;
+      width: 40px;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      z-index: 6;
+      background-color: $accent-color;
+      opacity: 0;
+      animation: both 1s;
+
+      &:hover {
+        cursor: pointer;
+        opacity: 0.5;
+      }
+
+      &--next {
+        right: 0;
+      }
+
+      &--previous {
+        left: 0;
+      }
     }
 
-    &__item {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      font-size: 0px;
-      min-width: 50vw;
-      max-width: 90vw;
-      height: 80vh;
-      border-radius: 12px;
-      box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.5);
-      position: absolute;
-      transition: all 0.3s ease-in;
-      overflow: hidden;
+    &__activeslide {
+      height: 100%;
 
-      &:nth-child(1) {
-        background: linear-gradient(45deg, #2d35eb 0%, #904ed4 100%);
-      }
-      &:nth-child(2) {
-        background: linear-gradient(45deg, #2d35eb 0%, #fdbb2d 100%);
-      }
-      &:nth-child(3) {
-        background: linear-gradient(45deg, #2d35eb 0%, #22c1c3 100%);
-      }
-      &:nth-child(4) {
-        background: linear-gradient(45deg, #fdbb2d 0%, #904ed4 100%);
-      }
-      &:nth-child(5) {
-        background: linear-gradient(45deg, #22c1c3 0%, #904ed4 100%);
-      }
-
-      &[data-pos="0"] {
-        z-index: 7;
-      }
-
-      &[data-pos="-1"],
-      &[data-pos="1"] {
-        opacity: 0.7;
-        filter: blur(1px) grayscale(10%);
-      }
-
-      &[data-pos="-1"] {
-        transform: translateX(-40%) scale(0.9);
-        z-index: 6;
-      }
-
-      &[data-pos="1"] {
-        transform: translateX(40%) scale(0.9);
-        z-index: 6;
-      }
-
-      &[data-pos="-2"],
-      &[data-pos="2"] {
-        opacity: 0.4;
-        filter: blur(3px) grayscale(20%);
-      }
-
-      &[data-pos="-2"] {
-        transform: translateX(-70%) scale(0.8);
-        z-index: 5;
-      }
-
-      &[data-pos="2"] {
-        transform: translateX(70%) scale(0.8);
-        z-index: 5;
-      }
-
-      &__image {
+      img {
         object-fit: contain;
+      }
+    }
+  }
+  &__thumbnails {
+    flex-wrap: nowrap;
+    justify-content: center;
+    height: 10%;
+    max-width: 15%;
+    z-index: 5;
+
+    &__thumbnail {
+      margin: 3%;
+
+      .clicked {
+        transform: scale(1.2);
+        border: thick double $accent-color;
+      }
+      button {
         height: 100%;
+        overflow: hidden;
+
+        &:hover {
+          cursor: pointer;
+        }
+        img {
+          height: 100%;
+          object-fit: cover;
+        }
       }
     }
   }
