--- a/my-app/src/pages/contact/contact.scss
+++ b/my-app/src/pages/contact/contact.scss
@@ -1,26 +1,77 @@
 @import "../../sass-utils/mixins.scss";
 @import "../../sass-utils/variables.scss";
 
+@-webkit-keyframes dash {
+  0% {
+    stroke-dashoffset: 1000;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 1000;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
+@-webkit-keyframes dash-check {
+  0% {
+    stroke-dashoffset: -100;
+  }
+  100% {
+    stroke-dashoffset: 900;
+  }
+}
+
+@keyframes dash-check {
+  0% {
+    stroke-dashoffset: -100;
+  }
+  100% {
+    stroke-dashoffset: 900;
+  }
+}
+
 #illustration {
-	height: 23rem;
-	margin-right: 4rem;
+  height: 27rem;
 }
 
 #envelope {
   animation: floating 2s ease-in-out infinite;
 }
 
-#star1, #star2, #star3, #star4, #star5, #star6 {
+#star1,
+#star2,
+#star3,
+#star4,
+#star5,
+#star6 {
   animation: blink 1s ease-in-out infinite;
 }
-#star2 { animation-delay: 100ms; }
-#star3 { animation-delay: 500ms; }
-#star4 { animation-delay: 700ms; }
-#star5 { animation-delay: 300ms; }
-#star6 { animation-delay: 200ms }
+#star2 {
+  animation-delay: 100ms;
+}
+#star3 {
+  animation-delay: 500ms;
+}
+#star4 {
+  animation-delay: 700ms;
+}
+#star5 {
+  animation-delay: 300ms;
+}
+#star6 {
+  animation-delay: 200ms;
+}
 
 #recaptcha-google {
   text-align: -webkit-center;
+  margin-top: 1rem
 }
 
 @keyframes floating {
@@ -40,7 +91,7 @@
     opacity: 0;
   }
   50% {
-    opacity: .5;
+    opacity: 0.5;
   }
   100% {
     opacity: 1;
@@ -53,19 +104,9 @@
   top: 1.5rem;
 }
 
-.box {
-  flex-direction: column;
-  width: 25%;
-  height: 100px;
-  border: 0;
-  border-radius: 3rem;
-  background-image:linear-gradient(131deg, #ffd340, #ff923c, #ff923c, #ff923c);
-  background-size: 300% 100%;
-}
-
 .form-group {
   text-align: center;
-  margin-bottom: 15px;
+  margin-bottom: 1rem;
 }
 
 .checkbox {
@@ -77,68 +118,112 @@
 .s-text {
   font-size: 60%;
   text-align: justify;
-  width: 65%;
 }
-.container-contact{
-  flex-direction: column;
 
+.container-contact {
   .contact-details {
-    width: 100%;
+    flex-direction: column;
+    width: 30%;
+    justify-content: space-evenly;
+
+    &__box {
+      position: relative;
+      flex-direction: column;
+      width: 90%;
+      height: 100px;
+      border: 0;
+      border-radius: 3rem;
+      background-image: linear-gradient(131deg, $dark-color, $primary-color, $light-color);
+      background-size: 300% 100%;
+      margin-bottom: 2rem;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+        rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+
+      &__icon {
+        position: absolute;
+        top: 50%;
+        left: 1.5rem;
+        transform: translatey(-50%);
+        color: white;
+      }
+
+      span {
+        color: white;
+      }
+    }
+  }
+
+  .google-map {
+    width: 70%;
+    height: 30rem;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   }
 }
 
 .container-form {
-	height: 100vh;
+  margin: 4rem 0 1rem 0;
 }
 
 form {
-	min-width: 25rem;
+  min-width: 25rem;
   max-width: 50%;
-	
-	.title {
-		font-family: 'Pacifico', cursive;
-		color: #212529;
-		font-size: 2.5rem;
-	}
-	
+
+  .title {
+    font-family: "Pacifico", cursive;
+    color: #212529;
+    font-size: 2.5rem;
+    padding-bottom: 2rem;
+  }
+
   .form-control {
     background-color: #f2f6f8;
-		border-radius: 2rem;
+    border-radius: 2rem;
     border: none;
     box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.11);
-		
+
     &.thick {
       height: 3.3rem;
-      padding: .5rem 3.5rem;
+      padding: 0.5rem 3.5rem;
     }
-		
-		&:focus {
-			background-color: #f2f6f8;
-			border: none;
-			box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.11);
-		}
+
+    &:focus {
+      background-color: #f2f6f8;
+      border: none;
+      box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.11);
+    }
   }
-	
-	.message .form-control {
-			padding: .5rem 1.8rem;
-	}
-	
+
+  .requirements {
+    color: #999;
+    max-height: 0;
+    transition: 0.28s;
+    overflow: hidden;
+    color: red;
+    font-style: italic;
+    text-align: center;
+    margin-top: 0.2rem;
+  }
+
+  .message .form-control {
+    padding: 0.5rem 1.8rem;
+  }
+
   ::placeholder {
-    font-family: 'Quicksand', sans-serif;
-		font-weight: 600;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 600;
     font-size: 1.1rem;
     color: #838788;
     position: relative;
     left: 0;
   }
-	
+
   input,
   textarea {
-		font-family: 'Quicksand', sans-serif;
+    font-family: "Quicksand", sans-serif;
     color: #212529;
     font-size: 1.1rem;
   }
-	
+
   .icon {
     color: #57565c;
     height: 1.3rem;
@@ -146,14 +231,14 @@ form {
 }
 
 .btn.btn-primary {
-  font-family: 'Quicksand', sans-serif;
-	font-weight: bold;
+  font-family: "Quicksand", sans-serif;
+  font-weight: bold;
   height: 2.5rem;
   line-height: 2.5rem;
   padding: 0 3rem;
   border: 0;
   border-radius: 3rem;
-  background-image:linear-gradient(131deg, #ffd340, #ff923c, #ff923c, #ff923c);
+  background-image: linear-gradient(131deg, #ffd340, #ff923c, #ff923c, #ff923c);
   background-size: 300% 100%;
   transition: all 0.3s ease-in-out;
 }
@@ -162,4 +247,75 @@ form {
   box-shadow: 0 0.5em 0.5em -0.4em #ff923cba;
   background-size: 100% 100%;
   transform: translateY(-0.15em);
+}
+
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 0.99;
+  }
+}
+
+.thank-you {
+  position: fixed;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(131deg, $light-color, white);
+  top: 30%;
+  left: 50%;
+  transform: translatex(-50%);
+  width: 50rem;
+  height: 30rem;
+  z-index: 4;
+  opacity: 0.7;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  border-radius: 30px;
+
+  &[data-open="1"] {
+    display: flex;
+    animation: fade ease 1s forwards;
+  }
+
+  &[data-open="0"] {
+    display: none;
+  }
+
+  svg {
+    width: 100px;
+    display: block;
+    margin: 40px auto 0;
+  }
+  
+  .path {
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 0;
+    &.circle {
+      -webkit-animation: dash .9s ease-in-out;
+      animation: dash .9s ease-in-out;
+    }
+    &.line {
+      stroke-dashoffset: 1000;
+      -webkit-animation: dash .9s .35s ease-in-out forwards;
+      animation: dash .9s .35s ease-in-out forwards;
+    }
+    &.check {
+      stroke-dashoffset: -100;
+      -webkit-animation: dash-check .9s .35s ease-in-out forwards;
+      animation: dash-check .9s .35s ease-in-out forwards;
+    }
+  }
+  
+  p {
+    text-align: center;
+    margin: 20px 0 60px;
+    font-size: 1.25em;
+    &.success {
+      color: $dark-color;
+    }
+  }
+  
 }
